--- a/index.html
+++ b/index.html
@@ -35,9 +35,11 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/animations.css" rel="stylesheet" />
@@ -256,28 +258,26 @@
             <!-- About Section Content-->
             <div class="row">
                 <div class="col-lg-4 ms-auto">
-                    <p class="lead">Je suis EDEMESSI 'nair0lf32' florian, étudiant en medecine à la faculté des sciences
-                        de la santé (FSS) de cotonou.
-                        passionné de développement informatique, je suis un touche-à-tout dans le domaine. Du
-                        développement web au graphisme, en passsant par la programmation desktop, android
-                        la modélisation/animation 3D, le motion graphics 2D, le montage vidéo, la vfx, le beatmaking, et
-                        un peu de game-design. Je me spécialise actuellement dans le
-                        coding mais je continue toujours d'apprendre. Quand je ne prends pas des constantes à l'hosto
-                        (vive l'externat), il m'arrive de Jouer sur mon Pc. C'est
-                        Probablement mon principal hobby depuis tout petit (mario,pokémon,zelda,GTA...). actuellement je
-                        gaspille de nombreuses heures sur league of legends et quelques
-                        jeux solo que mon ordinateur me permet de faire tourner.
+                    <p class="lead"> Je suis EDEMESSI florian, étudiant en medecine à la faculté des sciences
+                        de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à tout dans le domaine. 
+                        Développement web (évidemment...), graphisme, programmation desktop, android, modélisation/animation 3D, 
+                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (tout je te dis). Mais là ou je suis le moins nul
+                        c'est le coding. Je continue toujours d'apprendre, et quand je ne foutille pas à l'hopital (vive l'externat),
+                        il m'arrive de Jouer sur mon Pc. Probablement mon principal hobby. Actuellement je gaspille de nombreuses heures sur league of legends 
+                        et quelques jeux solo que mon ordinateur m'autorise à faire fonctionner.
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
-                    <p class="lead">Ceci est ma page personnelle, hébergée sur github. Il s'agit d'un projet rapide
-                        (développée en 24H) qui me servira de couverture
-                        en attendant de réaliser un véritable portfolio (peut-etre...Si j'ai pas la flemme). il se peut
-                        que j'ajoute des trucs ou que je la modifie. Mais en attendant c'est une page unique avec un
-                        petit espace
-                        de commentaires. J'ai ajouté une page fanzone league of legends pour parler un peu d'un de mes
-                        jeux favoris. Vous pouvez y accéder via le menu ou en cliquant <a class="text-white"
-                            href="/lol-fanzone.html">ici</a>.</br>
+                    <p class="lead"> Ceci est une page personnelle,hébergée sur github. Juste un mini-projet personnel
+                        qui me sert de couverture en attendant de réaliser un vrai portfolio (peut-etre...Si j'ai pas la flemme).
+                        il se peut que j'ajoute des trucs ou que je la modifie. Il y a justement en bas un espace
+                        de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une critique CONSTRUCTIVE (svp restons courtois)
+                        et proposer des trucs à ajouter ou retirer...
+                        Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés. J'ai aussi ajouté une page fanzone league of legends 
+                        (pourquoi pas). Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html" role="button">ici</a>. 
+                        Le site est en français de base mais y'a en haut des drapaux pour traduire au besoin (sauf les commentaires).
+                        <br><br>
+                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;"> nair0lf32 </span>
                     </p>
                 </div>
             </div>
@@ -338,7 +338,7 @@
                     <p class="contacts font-weight-light mb-0">
                         mail: florianedem@gmail.com </br></pbr>
                         tel: (+229) 67242336 </br>
-                        télépathie/vaudou: je déconne j'ai pas ce réseau là
+                        télépathie ou vaudou: je déconne, j'ai pas ce réseau là
                     </p>
 
                 </div>
