--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -45,9 +45,11 @@
     <!-- Font Awesome icons (free version)-->
     <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
     <!-- Google fonts-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
-        type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
     <link href="css/animations.css" rel="stylesheet" />
@@ -310,18 +312,17 @@
                         games (le géant du jeu vidéo chinois). Le jeu a bien évolué au fil du
                         temps (depuis 2009) mais personnellement je l'ai rejoint en
                         2016 (saison 6 je crois). J'ai débuté sur le serveur europe de l'ouest
-                        (euw) avec un pote "freddy"&nbsp;
+                        (EUW) avec un pote "freddy"&nbsp;
                         <a href="https://euw.op.gg/summoner/userName=blckGamer">Blckgamer</a>
-                        qui est actuellement platine. Moi je suis resté un éternel bronze.
-                        J'ai débuté avec un compte
+                        qui est actuellement platine sur le serveur russe. J'ai débuté avec un compte
                         <a href="https://euw.op.gg/summoner/userName=florianXnairolf">florianXnairolf</a>
-                        qui a fini banni (je vous jure j'ai rien fait), puis j'ai emprunté le
+                        qui a fini banni (je vous jure j'ai rien fait), puis j'ai "emprunté" le
                         compte de mon frère
                         <a href="https://euw.op.gg/summoner/userName=harmelford">harmelford</a>
-                        qui est actuellement mon compte principal. J'ai un compte secondaire
-                        sous le pseudo
+                        qui est actuellement mon compte principal (il joue rarement).
+                        J'ai créé un compte secondaire sous le pseudo:
                         <a href="https://euw.op.gg/summoner/userName=medic229">medic229</a>.
-                        Il y a ici quelqes vidéos qui expliquent ce qu'est
+                        Il y a en bas deux vidéos qui expliquent ce qu'est
                         league of legends (promo en bonus):<br />
                         <br />
                     </p>
@@ -346,20 +347,21 @@
 
                     <p class="lead text-white text-center mb-0">
                         <br />&nbsp;Sinon vous pouez toujours visiter le site web officiel de
-                        Riot games (que j'appelle affectueusement rito). En fait c'est plutot
-                        le lien vers le site de league of legends car désormais rito a créé
-                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics..):
+                        Riot games (Rito pour les intimes):
                         <a href="https://euw.leagueoflegends.com/fr-fr/">Site officiel du jeu</a>.&nbsp;&nbsp;<br />
-                        <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu
-                        si vous etes interressés. Par contre attention, league of legends n'a
+                        En fait c'est le lien vers le site de league of legends car désormais rito a créé
+                        d'autres jeux (Valorant, Legends of Runeterra, Teamfight tactics..)
+                        <br />Il y a dessus un tutoriel qui explique mieux les règles du jeu,
+                        si vous etes interressés. Par contre ATTENTION, league of legends n'a
                         pas que des aspects positifs et on vous en parle sur le site du jeu
                         (commnauté la plus toxique du gaming? XD).
-                        Mais ça c'est tout un débat que je
-                        n'aborderai pas ici.<br />J'ai ajouté dans le menu une page vidéos ,
-                        avec les meilleurs clips et trailers (selon moi) de league of legends.&nbsp;<br />
-                        <br />Bon, sur ce je vous laisse, les minions apparaissent dans 30
+                        Mais ça c'est tout un débat que je n'aborderai pas ici (mais vous etes avertis).<br />
+                        J'ai ajouté dans le menu une page vidéos avec les meilleurs clips et trailers (selon moi) 
+                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse, les minions apparaissent dans 30
                         secondes. Peut-etre pourrions nous nous croiser dans la faille de
                         l'invocateur. "Bonne chance dans les champs de justice"
+                        <br><br>
+                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;"> nair0lf32 </span>
                     </p>
                 </div>
             </div>
