added simple animation

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
@@ -66,7 +67,8 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg"
+            alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
@@ -217,11 +219,12 @@
     <header class="masthead bg-primary text-white text-center">
         <div class="container d-flex align-items-center flex-column">
             <!-- Masthead Avatar Image-->
-            <div class=" img-hover-zoom avatar"> 
-            <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg" alt="EDEMESSI_FLorian_nairolf32_avatar" />
+            <div class=" img-hover-zoom avatar">
+                <img class="masthead-avatar mb-5" src="assets/img/avataaars.svg"
+                    alt="EDEMESSI_FLorian_nairolf32_avatar" />
             </div>
             <!-- Masthead Heading-->
-            <h1 class="masthead-heading text-uppercase mb-0">Bienvenue sur ma Page</h1>
+            <h1 class="masthead-heading text-uppercase mb-0 hello">Bienvenue sur ma Page</h1>
             <!-- Icon Divider-->
             <div class="divider-custom divider-light">
                 <div class="divider-custom-line"></div>
@@ -239,9 +242,9 @@
             <div class="row justify-content-center">
                 <!-- Portfolio Item -->
                 <div class="photo-container">
-                <img class="img-fluid photo" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
+                    <img class="img-fluid photo" src="assets/img/portfolio/self.png" alt="EDEMESSI_FLorian_nairolf32" />
+                </div>
             </div>
-        </div>
     </section>
 
     <!-- About Section-->
@@ -259,25 +262,36 @@
             <div class="row">
                 <div class="col-lg-4 ms-auto">
                     <p class="lead"> Je suis EDEMESSI florian, étudiant en medecine à la faculté des sciences
-                        de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à tout dans le domaine. 
-                        Développement web (évidemment...), graphisme, programmation desktop, android, modélisation/animation 3D, 
-                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (tout je te dis). Mais là ou je suis le moins nul
-                        c'est le coding. Je continue toujours d'apprendre, et quand je ne foutille pas à l'hopital (vive l'externat),
-                        il m'arrive de Jouer sur mon Pc. Probablement mon principal hobby. Actuellement je gaspille de nombreuses heures sur league of legends 
+                        de la santé (FSS) de cotonou. passionné de développement informatique, j'ai touché à tout dans
+                        le domaine.
+                        Développement web (évidemment...), graphisme, programmation desktop, android,
+                        modélisation/animation 3D,
+                        motion graphics 2D, montage vidéo, vfx, beatmaking, game-design (tout je te dis). Mais là ou je
+                        suis le moins nul
+                        c'est le coding. Je continue toujours d'apprendre, et quand je ne foutille pas à l'hopital (vive
+                        l'externat),
+                        il m'arrive de Jouer sur mon Pc. Probablement mon principal hobby. Actuellement je gaspille de
+                        nombreuses heures sur league of legends
                         et quelques jeux solo que mon ordinateur m'autorise à faire fonctionner.
                     </p>
                 </div>
                 <div class="col-lg-4 me-auto">
                     <p class="lead"> Ceci est une page personnelle,hébergée sur github. Juste un mini-projet personnel
-                        qui me sert de couverture en attendant de réaliser un vrai portfolio (peut-etre...Si j'ai pas la flemme).
+                        qui me sert de couverture en attendant de réaliser un vrai portfolio (peut-etre...Si j'ai pas la
+                        flemme).
                         il se peut que j'ajoute des trucs ou que je la modifie. Il y a justement en bas un espace
-                        de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une critique CONSTRUCTIVE (svp restons courtois)
+                        de commentaires. Vous pouvez y laisser un message sympa, une blague, une image drole, ou une
+                        critique CONSTRUCTIVE (svp restons courtois)
                         et proposer des trucs à ajouter ou retirer...
-                        Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés. J'ai aussi ajouté une page fanzone league of legends 
-                        (pourquoi pas). Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html" role="button">ici</a>. 
-                        Le site est en français de base mais y'a en haut des drapaux pour traduire au besoin (sauf les commentaires).
+                        Vous pouvez le faire anonymement ou vous conneter (Sign in) par les moyens proposés. J'ai aussi
+                        ajouté une page fanzone league of legends
+                        (pourquoi pas). Vous pouvez y accéder via le Menu ou en cliquant <a href="/lol-fanzone.html"
+                            role="button">ici</a>.
+                        Le site est en français de base mais y'a en haut des drapaux pour traduire au besoin (sauf les
+                        commentaires).
                         <br><br>
-                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;"> nair0lf32 </span>
+                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
+                            nair0lf32 </span>
                     </p>
                 </div>
             </div>
@@ -338,7 +352,7 @@
                     <p class="contacts font-weight-light mb-0">
                         mail: florianedem@gmail.com </br></pbr>
                         tel: (+229) 67242336 </br>
-                        télépathie ou vaudou: je déconne, j'ai pas ce réseau là
+                        télépathie ou vaudou: Je déconne, j'ai pas ce réseau là (les utilisateurs me contactez pas svp)
                     </p>
 
                 </div>
