--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html lang="fr">
 
 <head>
+    <!--LogRocket -->
+    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>
+        window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
+    </script>
+
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
