--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -2,6 +2,12 @@
 <html lang="fr">
 
 <head>
+    <!--LogRocket -->
+    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>
+        window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
+    </script>
+
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -48,7 +54,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css" />
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css" />
+    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet"
+        type="text/css" />
     <link href="https://fonts.googleapis.com/css2?family=Homemade+Apple&display=swap" rel="stylesheet">
     <!-- Core theme CSS (includes Bootstrap)-->
     <link href="css/styles.css" rel="stylesheet" />
@@ -72,7 +79,8 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg"
+            alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
@@ -356,12 +364,14 @@
                         pas que des aspects positifs et on vous en parle sur le site du jeu
                         (commnauté la plus toxique du gaming? XD).
                         Mais ça c'est tout un débat que je n'aborderai pas ici (mais vous etes avertis).<br />
-                        J'ai ajouté dans le menu une page vidéos avec les meilleurs clips et trailers (selon moi) 
-                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse, les minions apparaissent dans 30
+                        J'ai ajouté dans le menu une page vidéos avec les meilleurs clips et trailers (selon moi)
+                        de league of legends.&nbsp;<br /> <br />Bon, sur ce je vous laisse, les minions apparaissent
+                        dans 30
                         secondes. Peut-etre pourrions nous nous croiser dans la faille de
                         l'invocateur. "Bonne chance dans les champs de justice"
                         <br><br>
-                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;"> nair0lf32 </span>
+                        <span class="signature" style="font-family: 'Homemade Apple', cursive; ; margin-left: 30%;">
+                            nair0lf32 </span>
                     </p>
                 </div>
             </div>
