--- a/lol-videos.html
+++ b/lol-videos.html
@@ -2,6 +2,12 @@
 <html lang="fr">
 
 <head>
+    <!--LogRocket -->
+    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
+    <script>
+        window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
+    </script>
+
     <!--Meta tags -->
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
@@ -72,7 +78,8 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg" alt="pac-man-spinner from loading.io">
+    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg"
+            alt="pac-man-spinner from loading.io">
         <p class="text-center text-white mb-0">loading...</p>
     </div>
 
