--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -2,11 +2,9 @@
 <html lang="fr">
 
 <head>
-    <!--LogRocket -->
-    <script src="https://cdn.lr-in.com/LogRocket.min.js" crossorigin="anonymous"></script>
-    <script>
-        window.LogRocket && window.LogRocket.init('dqqywl/nairol32-prod');
-    </script>
+    <!--Bugsnag -->
+    <script src="//d2wy8f7a9ursnm.cloudfront.net/v7/bugsnag.min.js"></script>
+    <script>Bugsnag.start({ apiKey: 'c5c6f3412ee43950f99d0bd590dc168a' })</script>
 
     <!--Meta tags -->
     <meta charset="utf-8" />
