fix preloader text

--- a/lol-fanzone.html
+++ b/lol-fanzone.html
@@ -81,9 +81,9 @@
 
 <body id="page-top">
     <!-- For loading purposes-->
-    <div class="flex-fill loader img-hover-zoom"> <img src="/assets/img/pacman.svg"
+    <div class="flex-fill loader img-hover-zoom"> <img class="img-hover-zoom" src="/assets/img/pacman.svg"
             alt="pac-man-spinner from loading.io">
-        <p class="text-center text-white mb-0">loading...</p>
+        <p class="text-center text-white mb-0 loadtext">loading...</p>
     </div>
 
     <!-- Navigation-->
